--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,8 +19,17 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-s
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=120
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-line-wrap=none
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.whileBracePlacement=NEW_LINE
-include.path=${php.global.include.path}
+ignore.path=
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_53
+phpunit.bootstrap=
+phpunit.bootstrap.create.tests=false
+phpunit.configuration=
+phpunit.run.test.files=false
+phpunit.script=
+phpunit.suite=
+phpunit.test.groups.ask=false
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
