--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,12 +7,14 @@ auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=no
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.blankLinesGroupFieldsWithoutDoc=false
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.catchBracePlacement=NEW_LINE
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.continuationIndentSize=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.expand-tabs=false
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.forBracePlacement=NEW_LINE
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.ifBracePlacement=NEW_LINE
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.indent-shift-width=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.methodDeclBracePlacement=NEW_LINE
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.otherBracePlacement=NEW_LINE
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceAfterShortPHPTag=false
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaces-per-tab=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.switchBracePlacement=NEW_LINE
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-size=4
