--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,17 +21,17 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-s
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=120
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-line-wrap=none
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.whileBracePlacement=NEW_LINE
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 ignore.path=
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
-phpunit.bootstrap=
-phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.run.test.files=false
-phpunit.script=
-phpunit.suite=
-phpunit.test.groups.ask=false
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
